--- a/package.json
+++ b/package.json
@@ -69,7 +69,8 @@
     "react": "^19.1.0",
     "react-beautiful-dnd": "^13.1.1",
     "react-day-picker": "8.10.1",
-    "react-dom": "^19.1.0",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
     "react-hook-form": "^7.56.3",
     "react-i18next": "^15.6.0",
     "react-resizable-panels": "^3.0.2",
@@ -85,8 +86,8 @@
   },
   "devDependencies": {
     "@eslint/js": "^9.25.0",
-    "@types/react": "^19.1.2",
-    "@types/react-dom": "^19.1.2",
+    "@types/react": "^18.2.79",
+    "@types/react-dom": "^18.2.25",
     "@vitejs/plugin-react": "^4.4.1",
     "eslint": "^9.25.0",
     "eslint-plugin-react-hooks": "^5.2.0",
