--- a/package.json
+++ b/package.json
@@ -72,6 +72,7 @@
     "react-dom": "^18.3.1",
     "react-hook-form": "^7.56.3",
     "react-i18next": "^15.6.0",
+    "react-router-dom": "^6.28.0",
     "react-resizable-panels": "^3.0.2",
     "recharts": "^2.15.3",
     "rss-parser": "^3.13.0",
